<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_language_24px"

        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_manage"
        android:icon="@drawable/ic_pets_24px"
        android:title="@string/title_walk" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/title_group" />

</menu>
