<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.homekippa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.homekippa.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_walk"
        android:name="com.example.homekippa.ui.walk.WalkFragment"
        android:label="@string/title_walk"
        tools:layout="@layout/fragment_walk" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.homekippa.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.example.homekippa.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />
</navigation>